# XXX

./: BinanceAPI.txt  CMakeLists.txt  resources.qrc
inc/: Settings.hpp  StyleManager.hpp  mainwindow.hpp
inc/CustomWindowDialogs/: CustomQDialog.hpp  DialogDynamicsGraph.hpp  DialogTableCurrencyRates.hpp
inc/Notification/: Notification.hpp  NotificationConfig.hpp
inc/Parser/: BinanceParser.hpp  CacheData.hpp  ParserCB.hpp  RegularParser.hpp
settings/: config.json
settings/styles/: main.qss
src/: Settings.cpp  StyleManager.cpp  WidgetsHandler.cpp  main.cpp  mainwindow.cpp
src/CustomWindowDialogs/: DialogDynamicsGraph.cpp  DialogTableCurrencyRates.cpp
src/Notification/: Notification.cpp  NotificationConfig.cpp
src/Parser/: BinanceParser.cpp  CacheData.cpp  ParserCB.cpp  RegularParser.cpp
